# pytest_jira

./: .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  .release-it.json  .travis.yml  README.md  README.rst  catalog-info.yaml  issue_model.py  jira.cfg  jira_model.py  models.py  pyproject.toml  pytest.ini  pytest_jira.py  pytest_marker_jira.py  requirements-pytest2.txt  requirements-pytest3.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_jira.py  tox.ini
.github/workflows/: publish.yml  test.yml
pytest_jira/: connection.py  fixtures.py  hooks.py  markbroker.py  plugin.py
test/: conftest.py  test_jira.py
tests/: requirements.txt  test_jira.py  test_utils.py
