[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=7.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-jira"
dynamic = ["version"]
description = "py.test JIRA integration plugin, using markers"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "GPL-2.0-only" }
authors = [
    { name = "James Laska", email = "james.laska@gmail.com" },
    { name = "Lukas Bednar", email = "lukyn17@gmail.com" }
]
keywords = ["pytest", "jira", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]

dependencies = [
    "pytest>=2.2.4",
    "six",
    "requests>=2.13.0",
    "retry2>=0.9.5",
    "marshmallow>=3.2.0",
    "packaging"
]
[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "flake8",
  "coverage",
  "isort",
  "pre-commit",
]

[project.entry-points."pytest11"]
pytest_jira = "pytest_jira"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytest_jira*", "issue_model*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.black]
line-length = 80
[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["pytest_jira"]
include_trailing_comma = true
use_parentheses = true
