[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytest_jira*", "issue_model*"]

[project]
name = "pytest-jira"
version = "0.3.22"
description = "py.test JIRA integration plugin, using markers"
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-2.0-only"
authors = [
    { name = "James Laska", email = "james.laska@gmail.com" },
    { name = "Lukas Bednar", email = "lukyn17@gmail.com" }
]
keywords = ["pytest", "jira", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]

[project.urls]
Repository = "https://github.com/rhevm-qe-automation/pytest_jira"


dependencies = [
    "pytest>=2.2.4",
    "six",
    "requests>=2.13.0",
    "retry2>=0.9.5",
    "marshmallow>=3.2.0",
    "packaging"
]
[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "flake8",
  "coverage",
  "isort",
  "pre-commit",
]


[project.entry-points."pytest11"]
pytest_jira = "pytest_jira"


[tool.black]
line-length = 80
[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["pytest_jira"]
include_trailing_comma = true
use_parentheses = true
