[metadata]
name=pytest-jira
author=James Laska
author_email=james.laska@gmail.com
summary=py.test JIRA integration plugin, using markers
description-file=README.md
license=GPL
home-page=http://github.com/rhevm-qe-automation/pytest_jira
keywords=
    pytest
    jira
    plugin
classifier=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 2.7
[entry_points]
pytest11 =
    pytest_jira = pytest_jira
[files]
modules=
    pytest_jira
