[metadata]
name=pytest-jira
author=James Laska
author_email=james.laska@gmail.com
summary=py.test JIRA integration plugin, using markers
description_file=README.rst
license=GPLv2
home_page=http://github.com/rhevm-qe-automation/pytest_jira
keywords=
    pytest
    jira
    plugin
classifier=
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
[entry_points]
pytest11 =
    pytest_jira = pytest_jira
[files]
modules=
    pytest_jira
    issue_model
[bdist_wheel]
universal = 1
[sdist]
formats = zip
